syntax = "proto3";
option java_multiple_files = true;
package com.vima.gateway;

import "google/protobuf/timestamp.proto";
import "Shared.proto";

message SearchReservationRequest {
  string country = 1;
  string city = 2;
  int32 guests = 3;
  DateRange period = 4;
}

message SearchReservationResponse {
  repeated string ids = 1;
}

service ReservationService {
  rpc searchReservation(SearchReservationRequest) returns(SearchReservationResponse);
}